improvement(index.ejs): usage Case

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -10,11 +10,16 @@
   <p>A RESTful API for searching Japan Address by zip-code</p>
   <p>日本郵便番号検索API</p>
 
-  <button onclick="location.href='/api'">TRY</button>
+  <button onclick="location.href='/api'">TRY API</button>
 
-  <div class="footer">
-    <% include ../partials/footer.ejs %>
-  </div>
+
+  <h2>Usage Case</h2>
+  <iframe src="https://codesandbox.io/embed/japan-post-api-example-107u2?fontsize=14&hidenavigation=1&theme=dark"
+    style="width:100%; height:500px; border:0; border-radius: 4px; overflow:hidden;" title="Japan Post API Example"
+    allow="accelerometer; ambient-light-sensor; camera; encrypted-media; geolocation; gyroscope; hid; microphone; midi; payment; usb; vr"
+    sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts"></iframe>
+
+  <% include ../partials/footer.ejs %>
 </body>
 
 </html>
