--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
 <footer>
   made with ❤️ by <a href="https://twitter.com/ThaddeusJiang" target="_blank"
-    rel="noopener noreferrer">@ThaddeusJiang</a> | <a href="https://github.com/ThaddeusJiang/jp-post-api"
-    target="_blank" rel="noopener noreferrer">open source on GitHub</a>
+    rel="noopener noreferrer">@ThaddeusJiang</a> | <a href="https://github.com/ThaddeusJiang/ZipcodeJP" target="_blank"
+    rel="noopener noreferrer">open source on GitHub</a>
 </footer>
