--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,3 +1,3 @@
-<title>Japan Post (日本郵便番号検索API)</title>
+<title>ZipcodeJP (日本郵便番号検索API)</title>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/kognise/water.css@latest/dist/dark.min.css">
 <link rel="stylesheet" type="text/css" href="/stylesheets/main.css" />
