--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -13,7 +13,7 @@
   <h2>1. Try</h2>
   <form action="/api/find" method="get">
     <label>
-      <p>Zip-code:</p>
+      <p>Zipcode</p>
       <input type="text" name="q" value="" placeholder="000-0000">
     </label>
     <p>
@@ -49,7 +49,7 @@
       {"error":"q can not be empty!"}
     </code>
   </pre>
-  <p>400 Bad Request</p>
+  <p>404 Not Found</p>
   <pre>
   <code>
       {"error":"record not found!"}
